fixes overflow x issue

--- a/frontend/src/Pages/LycheHomePage/LycheHomePage.module.scss
+++ b/frontend/src/Pages/LycheHomePage/LycheHomePage.module.scss
@@ -12,7 +12,7 @@
 }
 
 .image_container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 30;
   display: flex;
